--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity">
-            <!--android:screenOrientation="landscape"-->
+
             <!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NewTerrainActivity" />
+        <activity android:name=".NewTerrainActivity"
+            android:screenOrientation="landscape"/>
         <activity android:name=".StatisticsActivity" />
         <activity
             android:name=".SettingsActivity"
@@ -28,7 +29,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.azaric.tiltmaze.MainActivity" />
         </activity>
-        <activity android:name=".GameActivity"></activity>
+        <activity android:name=".GameActivity"
+            android:screenOrientation="landscape">
+
+        </activity>
     </application>
 
 </manifest>
